--- a/38_ExpressAndMongoose/views/products/index.ejs
+++ b/38_ExpressAndMongoose/views/products/index.ejs
@@ -14,10 +14,9 @@
         <% for(let product of products) { %>
             <li>
                 <div>
-                    <%=product.name %>
-                </div>
-                <div>
-                    Price: $<%=product.price %>
+                    <a href="/products/<%=product._id%> " class="href">
+                        <%= product.name %>
+                    </a>
                 </div>
             </li>
             <% } %>
