learned to delete items from database

--- a/38_ExpressAndMongoose/views/products/show.ejs
+++ b/38_ExpressAndMongoose/views/products/show.ejs
@@ -23,6 +23,9 @@
 
     <a href="/products">Back</a>
     <a href="/products/<%= product._id %>/edit">Edit</a>
+    <form action="/products/<%=product._id %>?_method=delete" method="post">
+        <button>Delete</button>
+    </form>
 </body>
 
 </html>
