--- a/38_ExpressAndMongoose/views/products/edit.ejs
+++ b/38_ExpressAndMongoose/views/products/edit.ejs
@@ -17,11 +17,15 @@
         <input type="number" name="price" id="price" placeholder="Product Price" value="<%=product.price %>">
         <label for="category">Category</label>
         <select name="category" id="category">
-            <option value="fruit">Fruit</option>
-            <option value="vegetable">Vegetable</option>
-            <option value="dairy">Dairy</option>
+            <% for(let category of categories){ %>
+                <option value="<%=category%>" <%=product.category===category ? 'selected' : '' %> >
+                    <%=category%>
+                </option>
+                <% } %>
         </select>
         <button>Submit</button>
+
+        <a href="/products/<%=product._id %> ">Cancel</a>
     </form>
 </body>
 
